[gd_scene load_steps=4 format=3 uid="uid://b3ia8nmgwuqd8"]

[ext_resource type="FontFile" uid="uid://pp3xssdve1oe" path="res://fonts/GraffitiPaintBrush.ttf" id="1_ige2o"]
[ext_resource type="Script" path="res://ui/game_over.gd" id="1_r48nk"]
[ext_resource type="PackedScene" uid="uid://3enif81x2vhy" path="res://ui/leaderboard.tscn" id="2_epk8d"]

[node name="GameOver" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r48nk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.760784, 0.0745098, 0.0745098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("1_ige2o")
theme_override_font_sizes/font_size = 120
text = "Game Over"
horizontal_alignment = 1

[node name="Leaderboard" parent="CenterContainer/VBoxContainer" instance=ExtResource("2_epk8d")]
custom_minimum_size = Vector2(800, 600)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play Again"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Button" to="." method="playAgain"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Button2" to="." method="mainMenu"]
